Complete JavaDocs for public API Some code cleanup